# proface-pre-subset

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  uv.lock.license
.github/workflows/: ci.yml  python-publish.yml
src/proface/tools/preprocessor/subset/: __init__.py  subset.py
tests/: test_entrypoints.py  test_errors.py
