# SPDX-FileCopyrightText: 2026 ProFACE developers
#
# SPDX-License-Identifier: MIT

[project]
name = "proface-pre-subset"
version = "0.1.1.dev1"
description = "ProFACE preprocessor tool: extract FEA subdomain"
readme = "README.md"
license = "MIT"
license-files = ["LICENSES/MIT.txt"]
authors = [
    { name = "Stefano Miccoli", email = "stefano.miccoli@polimi.it" },
    { name = "Lorenzo Rusnati", email = "lorenzo.rusnati@polimi.it" }
]
maintainers = [
    { name = "ProFACE developers", email = "proface@polimi.it" }
]
keywords = ["proface", "preprocessor", "plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "attrs>=25.4.0",
    "cattrs>=25.3.0",
    "h5py>=3.15.1",
    "numpy>=2.4.1",
    "proface-pre>=0.3.0",
]

[project.urls]
Repository = "https://github.com/ProFACE-dev/proface-pre-subset"
Issues = "https://github.com/ProFACE-dev/proface-pre-subset/issues"
Homepage = "https://proface.polimi.it"

[dependency-groups]
dev = [
    "coverage>=7.13.2",
    "mypy>=1.18.2",
    "pytest>=9.0.2",
]

[project.entry-points."proface.preprocessor.tools"]
subset = "proface.tools.preprocessor.subset:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# this is a namespace package:
packages = ["src/proface"]

#
# ruff
#
[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E","F","UP","B","SIM","I","RUF", "TRY", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.mypy]
python_version = "3.13"
files = ["src"]
strict = true

[[tool.mypy.overrides]]
module = ["h5py"]
ignore_missing_imports = true
